--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 - sudo apt-get update -qq
 
 install:
+- sudo apt-get install graphviz
 - sudo apt-get install -qq g++-6
 - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
 
@@ -21,11 +22,13 @@ script:
 - cmake --build . --target package
 - doxygen Doxygen
 
+
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
+  local-dir: html
   on:
     branch: master
 
